--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Dry Oar Site Plan</h1>
+    <h1>Wet Paddle Site Plan</h1>
     <h2>Randy Lee</h2>
     <h2>WDD 130-15</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,18 +20,24 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>The purpose of this website is to increase the existing customer base by informing the customer 
+      about the company's activities and the range of services provided. Also to provide effective 
+      communication with customers about whitewater rafting.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Our target audience are adults seeking face paced adventure as well as individuals and families 
+      seeking an introductory whitewater experience. We will provide rafting vacations that will be 
+      the ultimate way to escape the grind, disconnect and spend quality time with friends or loved 
+      ones. As well as providing access to remote wilderness and experience scenic areas. 
+      Our audience will access the site mostly through computer browsers or their mobile device.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/wet-paddle-logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +48,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/d5ce92-c0b874-58574b-ddded3-ffffff"
+      target="_blank">https://coolors.co/d5ce92-c0b874-58574b-ddded3-ffffff</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +60,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#d5ce92]</td>
+        <td class="secondary">[#c0b874]</td>
+        <td class="accent1">[#58574b]</td>
+        <td class="accent2">[#ddded3]</td>
       </tr>
     </table>
 
