--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Wet Paddle Site Plan</h1>
+    <h1>River Adventure Site Plan</h1>
     <h2>Randy Lee</h2>
     <h2>WDD 130-15</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
