--- a/aboutme/byui.html
+++ b/aboutme/byui.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="byui.html">Home</a>
+        <a id="active" href="byui.html">Home</a>
         ,<link rel="stylesheet" href="styles/styles.css" />
         <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
         <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
