--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,5 +18,56 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="imges/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section>
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories With River Adventure</h4>
+            <div class="button-box">
+                <a class="book" href="contactus.html">Book Now</a>
+            </div>
+        </section>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="images/river_icon.jpg" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.jpg" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids_card">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, canyons, and high peaks; it's way more than just rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors</p>
+            <a class="join" href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>River Adventure &copy; 2023 - Randy Lee</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.jpg" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
