--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,7 +20,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="imges/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section>
             <h1 class="home-title">Have An Adventure</h1>
@@ -33,12 +33,12 @@
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.jpg" alt="river icon">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.jpg" alt="fire icon">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids_card">
@@ -65,7 +65,7 @@
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="instagram icon">
+                <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
