--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <a href="#">Education</a>
+            <h1>Education</h1>
         </div>
     </header>
     <main>
