--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -19,7 +19,7 @@
                 <p>Education is the difference between wishing you could help others & being able to help them</p>
             </div>
             <div id="author">
-                <p>---President Nelson</p>
+                <h4>---President Nelson</h4>
             </div>
             <div id="list">
                 <li>
