--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -22,12 +22,12 @@
                 <h4>---President Nelson</h4>
             </div>
             <div id="list">
-                <li>
-                    <ul>Faith in the Lord Jesus Christ</ul>
-                    <ul>Repentance</ul>
-                    <ul>Baptism by immersion for the remission of sins</ul>
-                    <ul>Laying on of hands for the gift of the Holy Ghost</ul>
-                </li>
+                <ul>
+                    <li>Faith in the Lord Jesus Christ</li>
+                    <li>Repentance</li>
+                    <li>Baptism by immersion for the remission of sins</li>
+                    <li>Laying on of hands for the gift of the Holy Ghost</li>
+                </ul>
             </div>
             <div>
                 <img id="nelsonimage" src="images/russell_nelson_official_portrait_2018.jpeg" alt="Image of President Nelson">
