--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -33,7 +33,7 @@
                 <img id="nelsonimage" src="images/russell_nelson_official_portrait_2018.jpeg" alt="Image of President Nelson">
             </div>
             <div id="article">
-                <p>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
+                <h2>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h2>
             </div>
         </section>
     </main>
