--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -38,8 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>Russell M. Nelson</p>
-        <p>President of the Church of Jesus Christ of Latter-day Saints</p>
+        Russell M. Nelson President of the Church of Jesus Christ of Latter-day Saints
     </footer>
 </body>
 </html>
