--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -21,6 +21,8 @@
             <div id="author">
                 <h4>---President Nelson</h4>
             </div>
+        </section>
+        <section>  
             <div id="list">
                 <ol>
                     <li>Faith in the Lord Jesus Christ</li>
@@ -29,6 +31,8 @@
                     <li>Laying on of hands for the gift of the Holy Ghost</li>
                 </ol>
             </div>
+        </section>
+        <section>  
             <div>
                 <img id="nelsonimage" src="images/russell_nelson_official_portrait_2018.jpeg" alt="Image of President Nelson">
             </div>
@@ -38,7 +42,7 @@
         </section>
     </main>
     <footer>
-        Russell M. Nelson President of the Church of Jesus Christ of Latter-day Saints
+        <p>Russell M. Nelson President of the Church of Jesus Christ of Latter-day Saints</p>
     </footer>
 </body>
 </html>
