--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a href="index.html" id="logo_link">
             <img class="logo" src="images/logo11_200.png" alt="River Adventure Logo">
@@ -70,5 +71,6 @@
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
