--- a/aboutme/nelsonpage.html
+++ b/aboutme/nelsonpage.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="styles/stylesnelson.css">
 </head>
 <body>
+    <di id="content">
     <header>
-        <div>
             <h1>Education</h1>
-        </div>
     </header>
     <main>
         <section>
@@ -24,7 +23,7 @@
         </section>
         <section>  
             <div id="list">
-                <ol>
+                <ol class="listol">
                     <li>Faith in the Lord Jesus Christ</li>
                     <li>Repentance</li>
                     <li>Baptism by immersion for the remission of sins</li>
@@ -42,7 +41,9 @@
         </section>
     </main>
     <footer>
-        <p>Russell M. Nelson President of the Church of Jesus Christ of Latter-day Saints</p>
+        <div>Russell M. Nelson</div>
+        <div>President of the Church of Jesus Christ of Latter-day Saints</div>
     </footer>
+    </di>
 </body>
 </html>
