--- a/claudios/site-plan.html
+++ b/claudios/site-plan.html
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Services <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Products  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,59 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Look your best and feel your best with a haircut or hairstyle by Claudio's Salon.  We take care and attention to detail when dealing with our clients and ensure that they are completely satisfied before leaving our salon. 
+      </p>
+      <p>
+        Our mission is to make you feel good inside and out. We have the best team of specialized stylists; we love new trends, and we are constantly learning to offer you the best and latest treatments for your well-being.  So, look no further, visit our barbershop today and experience the haircut of your life that will leave you feeling relaxed and looking perfectly.
+      </p>
+      <p>
+        With a commitment to the extraordinary hair styling, in both technical skill and vision, our team of stylists drive home the true passion and dedication it takes to be your first choice. With us, every visit is unique and made-to-measure from start to finish. Personal attention, high-level expertise, and a comprehensive understanding not only of what fashion-forward is but what works with your individual style and hair. This is what you can expect from an experience at Claudio's Salon.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/woman-washing-head-hairsalon-min.jpg" alt="image for homepage">
+        <img src="images/man-cuts-his-beard-barbershop-min.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Claudio's Salon bringing top end haircare to our community. We are passionate about hair, fashion, and customer service. Look at Our Services and join our existing customer base.
+      </p>
+      <p>
+        We will help you discover the real you, maybe even a new you! Your haircut design is personally tailored to meet your lifestyle, facial features, and lots more to give you the look you want to portray to the world.
+      </p>
+      <p>
+        Whether long or short, and no matter the condition of your hair, our team will give you that unique haircut that accentuates your face, meets your expectations, and boosts your confidence. Our haircut services, and the actual cuts, are easy to maintain for that perfect hairdo, and our haircut recommendations will help you care for your new do and keep your new cut and style lasting longer.
+      </p>
+      <p>
+        A haircut is a result of technique and vision. Every haircut will begin with a complete consultation for a personalized cut to work with your hair texture, facial structure and styling needs; followed by a luxurious shampoo & relaxing scalp massage.
+      </p>
+      <p>
+        We specialize in all areas of hair including precision haircuts, creative highlights, colors, barbering and fades. Our talented hairstylists truly love what they do. Our goal is to create hair that works with your lifestyle.
+      </p>
+      <p>
+        If you're looking for hair treatment experts and permanent hair color specialists, you have come to the right place. Interested in our hair re-conditioning treatments or hair styling services? Book an appointment with one of our expert hairstylists at Claudio's today!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/beautiful-woman-getting-her-hair-cut-home-by-hairstylist-min.jpg" alt="image for page">
+        <img src="images/man-getting-haircut-close-up-min.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Products</h3>
       <p>
-        [Written copy for the Page 3 here]
+        We are excited to introduce you to our favorite products.
+      </p>
+      <p>
+        Through an in-depth understanding of the technology behind every line we carry at the salon, we can help tailor the right product regimen for every individual.
+      </p>
+      <p>
+        By offering only the best and safest products in the industry, Claudio's Salon's products are guaranteed to maintain and enhance the integrity of your hair and color. Through an in-depth understanding of the technology behind every line we carry at the salon, we can help tailor the right product regimen for every individual.
+      </p>
+      <p>
+        We are proud to carry the best in hair care and skincare our industry has to offer. Paul Mitchell, Aveda, Jhonny B and Italtech occupy our shelves while the latest in product trends are featured seasonally. From high quality essential products to professional tools, we have a little bit of everything for everyone! 
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/label-cosmetics-salud-health-belleza-min.jpg" alt="image for page3">
+        <img src="images/top-view-anti-dandruff-hair-products-min.jpg" alt="image for page3">
 
       </ul>
       <hr>
