--- a/claudios/site-plan.html
+++ b/claudios/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Services</a>
+        <a href="#">Products</a>
       </nav>
       <hr>
       <h2>
@@ -156,7 +156,7 @@
       <p>
         If you're looking for hair treatment experts and permanent hair color specialists, you have come to the right place. Interested in our hair re-conditioning treatments or hair styling services? Book an appointment with one of our expert hairstylists at Claudio's today!
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for the Services Page</p>
         <img src="images/beautiful-woman-getting-her-hair-cut-home-by-hairstylist-min.jpg" alt="image for page">
         <img src="images/man-getting-haircut-close-up-min.jpg" alt="image for page">
 
@@ -174,7 +174,7 @@
       <p>
         We are proud to carry the best in hair care and skincare our industry has to offer. Paul Mitchell, Aveda, Jhonny B and Italtech occupy our shelves while the latest in product trends are featured seasonally. From high quality essential products to professional tools, we have a little bit of everything for everyone! 
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Products Page</p>
         <img src="images/label-cosmetics-salud-health-belleza-min.jpg" alt="image for page3">
         <img src="images/top-view-anti-dandruff-hair-products-min.jpg" alt="image for page3">
 
@@ -188,21 +188,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This is the home page wireframe with Google map in one of the boxes.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homepage.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Services page listing services provided and prices
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/services.png" alt="Services page wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Products</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Products page listing products we carry in store with brief summary of each.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/products.png" alt="Products page wireframe">
     </main>
   </body>
 
