--- a/claudios/index.html
+++ b/claudios/index.html
@@ -55,7 +55,7 @@
             </a>
             <p>Claudio's Salon &copy; 2023</p>
             <div id="footerNav">
-                <p><a href="serviceshtml">Services</a></p>
+                <p><a href="services.html">Services</a></p>
                 <p><a href="products.html">Products</a></p>
             </div>
         </footer>
