--- a/claudios/index.html
+++ b/claudios/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claudio's Hair Salon | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <div id="topNav">
-                <div>1824 W 3500 S #104, West Valley City</div>
-                <div></div>
+            <div class="topNav">
+                    <span id="address">1824 W 3500 S #104, West Valley City</span>
+                    <a href="https://facebook.com/claudioshairsalon" id="facebook" target="_blank">
+                        <img src="images/facebook.png" alt="Facebook">
+                    </a>
+                    <a href="#" id="twitter">
+                        <img src="images/twitter.png" alt="Twitter">
+                    </a>
             </div>
             <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -24,39 +30,49 @@
         </header>
         <div id="hero">
             <div id="heroBox">
-                <img src="images/woman-washing-head-hairsalon-min.jpg" alt="Woman getting her hair washed">
+                <img id="hero-img" src="images/woman-washing-head-hairsalon-min.jpg" alt="Woman getting her hair washed">
             </div>
-            <section>
+            <section id="hero-msg">
+                <div id="hero-msgBg">
                 <h1>Look Your Best And Feel Your Best</h1>
-                <h4>We take care and attention to detail when dealing with our clients and ensure that they are completely satisfied before leaving our salon.</h4>
+                <h4>We take care and attention to detail when dealing with our clients and ensure that they are completely satisfied before leaving our salon. So, look no further, visit our salon today and experience the haircut of your life that will leave you feeling relaxed and looking perfectly.</h4>
+                </div>
             </section>
         </div>
-        <main>
-            <section id="locBox">
+        <main class="home-grid">
+            <section class="locBox">
                <div id="locBox-Add">
-                <div id="salon">Claudio's Hair Salon</div>
-                <div id="address">1824 W 3500 S #104, West Valley City, UT</div>
-                <div id="phoneNum">801.952.0977</div>
-                <div id="hours">
-                    <h2>Mon-Fri | 10 AM - 8 PM</h2>
-                    <h2>Sat | 9 AM - 8 PM</h2>
-                    <h2>Sun | 10 AM - 4 PM</h2>
-                </div>
-                <div id="socIcons"></div>
+                    <h2>Claudio's Hair Salon</h2>
+                    <p>1824 W 3500 S #104, West Valley City, UT</p>
+                    <p>801.952.0977</p>
                </div>
+                <div id="hours">
+                    Mon-Fri | 10 AM - 8 PM<br>
+                    Sat | 9 AM - 8 PM<br>
+                    Sun | 10 AM - 4 PM
+                </div>
+                <div id="socIcons">
+                    <a href="https://facebook.com/claudioshairsalon" target="_blank">
+                        <img src="images/facebook.png" alt="Facebook">
+                    </a>
+                    <a href="#">
+                        <img src="images/twitter.png" alt="Twitter">
+                    </a>
+                </div>
             </section>
-            <section id="map">
-
+            <section class="locMap">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.9288485096376!2d-111.94409768545455!3d40.69756464643706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528b650d6168f3%3A0x5a3bdc30788b8638!2sClaudio&#39;s%20Hair%20Salon!5e0!3m2!1sen!2sus!4v1678914242196!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </main>
         <footer>
-            <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+            <a href="index.html">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
-            <p>Claudio's Salon &copy; 2023</p>
-            <div id="footerNav">
-                <p><a href="services.html">Services</a></p>
-                <p><a href="products.html">Products</a></p>
+            <div id="copyw">Claudio's Salon &copy; 2023</div>
+            <div class="footerNav">
+                <a href="index.html">Home</a>
+                <a href="services.html">Services</a>
+                <a href="products.html">Products</a>
             </div>
         </footer>
     </div>
