--- a/claudios/index.html
+++ b/claudios/index.html
@@ -73,6 +73,7 @@
                 <a href="index.html">Home</a>
                 <a href="services.html">Services</a>
                 <a href="products.html">Products</a>
+                <a href="site-plan.html">Siteplan</a>
             </div>
         </footer>
     </div>
