--- a/claudios/services.html
+++ b/claudios/services.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claudio's Hair Salon | Services</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <div id="topNav">
-                <div>1824 W 3500 S #104, West Valley City</div>
-                <div></div>
+            <div class="topNav">
+                    <span id="address">1824 W 3500 S #104, West Valley City</span>
+                    <a href="https://facebook.com/claudioshairsalon" id="facebook" target="_blank">
+                        <img src="images/facebook.png" alt="Facebook">
+                    </a>
+                    <a href="#" id="twitter">
+                        <img src="images/twitter.png" alt="Twitter">
+                    </a>
             </div>
             <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -24,43 +30,35 @@
         </header>
         <div id="heroServ">
             <div id="heroServ-msg">
-                <h4>Services</h4>
+                <h1>Services</h1>
                 <p>Claudio's Salon bringing top end haircare to our community. We are passionate about hair, fashion, and customer service. Look at Our Services and join our existing customer base. </p>
             </div>
             <div id="heroServ-box">
                 <img id="heroServ-img" src="images/man-getting-haircut-close-up-min.jpg" alt="Man getting haircut">
             </div>
         </div>
-        <main>
-            <section id="haircuts">
-               <div id="headingCuts">Haircuts</div>
-                <div id="typeCuts">Haircut | Blow Dry | Updo's | Weddings and Special Engagements</div>
-            </section>
-            <section id="colors">
-                <div id="headingColors">Colors</div>
-                 <div id="typeColors">Base Color | Highlights | Gloss | Color Correction</div>
-             </section>
-             <section id="tratmnents">
-                <div id="headingTreatments">Hair Treatments</div>
-                 <div id="typeTreatments">3 Step Conditioning Treatment | Brazilian Blow Out | Keratin Straightening | Cezanne Keratin</div>
-             </section>
-             <section id="extensions">
-                <div id="headingExt">Extensions</div>
-                 <div id="typeExt">Individual (K-Tip, I-Tip) | Tape in | Hand-Sewn & Beaded Wefts</div>
-             </section>
-             <section id="makeup">
-                <div id="headingMakeup">Make-Up</div>
-                 <div id="typeMakeup">Makeup Application | Weddings and Special Occasions</div>
-             </section>
+        <main id="serv-grid">
+                <h4 id="headingCuts">Haircuts</h4>
+                <div id="typeCuts">Haircut <div class="vl"></div> Fades <div class="vl"></div> Comb Over <div class="vl"></div> Blow Dry <div class="vl"></div> Line Up <div class="vl"></div> Updo's <div class="vl"></div> Weddings and Special Engagements</div>
+                <h4 id="headingColors">Colors</h4>
+                <div id="typeColors">Base Color <div class="vl"></div> Highlights <div class="vl"></div> Gloss <div class="vl"></div> Tone-On-Tone <div class="vl"></div> Color Correction</div>
+                <h4 id="headingTreatments">Hair Treatments</h4>
+                <div id="typeTreatments">3 Step Conditioning Treatment <div class="vl"></div> Brazilian Blow Out <div class="vl"></div> Keratin Straightening <div class="vl"></div> Cezanne Keratin</div>
+                <h4 id="headingExt">Extensions</h4>
+                <div id="typeExt">Individual (K-Tip, I-Tip) <div class="vl"></div> Tape in <div class="vl"></div> Hand-Sewn & Beaded Wefts</div>
+                <h4 id="headingMakeup">Make-Up / Waxing</h4>
+                <div id="typeMakeup">Makeup Application <div class="vl"></div> Facial Waxing <div class="vl"></div> Weddings and Special Occasions</div>
         </main>
         <footer>
-            <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+            <a href="index.html">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
-            <p>Claudio's Salon &copy; 2023</p>
-            <div id="footerNav">
-                <p><a href="services.html">Services</a></p>
-                <p><a href="products.html">Products</a></p>
+            <div id="copyw">Claudio's Salon &copy; 2023</div>
+            <div class="footerNav">
+                <a href="index.html">Home</a>
+                <a href="services.html">Services</a>
+                <a href="products.html">Products</a>
+                <a href="site-plan.html">Siteplan</a>
             </div>
         </footer>
     </div>
