--- a/claudios/products.html
+++ b/claudios/products.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claudio's Hair Salon | Products</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <div id="topNav">
-                <div>1824 W 3500 S #104, West Valley City</div>
-                <div></div>
+            <div class="topNav">
+                    <span id="address">1824 W 3500 S #104, West Valley City</span>
+                    <a href="https://facebook.com/claudioshairsalon" id="facebook" target="_blank">
+                        <img src="images/facebook.png" alt="Facebook">
+                    </a>
+                    <a href="#" id="twitter">
+                        <img src="images/twitter.png" alt="Twitter">
+                    </a>
             </div>
             <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -31,7 +37,7 @@
                 <img id="heroProd-img" src="images/label-cosmetics-salud-health-belleza-min.jpg" alt="Image of generic product">
             </div>
         </div>
-        <main>
+        <main id="prod-grid">
             <section class="prod1-card">
                 <img class="prod1-img" src="images/johnnyb.png" alt="Jhonny B products">
                 <h4>Jhonny B</h4>
@@ -64,13 +70,15 @@
             </section>
         </main>
         <footer>
-            <a href="index.html" id="logo_link">
-                <img class="logo" src="images/claudiosLogo.png" alt="Claudio's Salon Logo">
+            <a href="index.html">
+                <img class="logo" src="images/claudiosLogo2.png" alt="Claudio's Salon Logo">
             </a>
-            <p>Claudio's Salon &copy; 2023</p>
-            <div id="footerNav">
-                <p><a href="services.html">Services</a></p>
-                <p><a href="products.html">Products</a></p>
+            <div id="copyw">Claudio's Salon &copy; 2023</div>
+            <div class="footerNav">
+                <a href="index.html">Home</a>
+                <a href="services.html">Services</a>
+                <a href="products.html">Products</a>
+                <a href="site-plan.html">Siteplan</a>
             </div>
         </footer>
     </div>
