--- a/grande/site-plan.html
+++ b/grande/site-plan.html
@@ -20,17 +20,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to increase the existing customer base by informing the customer about the company's activities and the range of services provided. Also to provide effective communication with customers about the salon.</p>  <!-- change this -->
+      <p>The purpose of this website is to increase the existing customer base by informing the customer about the company's activities and the range of services provided.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>Our target audience are local families in the community. We will provide top end haircare with the highest quality customer service. Our audience will access the site mostly through computer browsers or their mobile device.</p>  <!-- change this -->
+      <p>Our target audience are commercial and resedential clients. We will provide professional tile and stone installation services. Our audience will access the site mostly through computer browsers or their mobile device.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/claudiosLogo.png" alt="Logo image">
+      <img src="images/Grande Main Logo 800x600.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -44,13 +44,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/759580-e0d1c3-f7f5ef-ffffff" target="_blank">https://coolors.co/759580-e0d1c3-f7f5ef-ffffff</a>
+      Palette URL: <a href="https://coolors.co/000000-4f4a49-fffdfd-2ba1a6" target="_blank">https://coolors.co/759580-e0d1c3-f7f5ef-ffffff</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#759580]</td><td class="secondary">[#E0D1C3]</td><td class="accent1">[#F7F5EF]</td><td class="accent2">[#FFFFFF]</td></tr>
+        <tr><td class="primary">[#000000]</td><td class="secondary">[#4f4a49]</td><td class="accent1">[#2ba1a6]</td><td class="accent2">[#FFFFFF]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Oswald  <!-- change this -->
+        Heading Font: Encode Sans Expanded  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Montserrat  <!-- change this -->
+        Paragraph Font: Source Sans 3  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -88,7 +88,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">Services</a>
-        <a href="#">Products</a>
+        <a href="#">Contact</a>
       </nav>
       <hr>
       <h2>
@@ -102,7 +102,7 @@
           Services <!-- change this -->
         </div>
         <div class="sm-page3">
-          Products  <!-- change this -->
+          Contact  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,60 +124,43 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Look your best and feel your best with a haircut or hairstyle by Claudio's Salon.  We take care and attention to detail when dealing with our clients and ensure that they are completely satisfied before leaving our salon. 
+        High Quality, Affordable Flooring Installation in Utah.
       </p>
       <p>
-        Our mission is to make you feel good inside and out. We have the best team of specialized stylists; we love new trends, and we are constantly learning to offer you the best and latest treatments for your well-being.  So, look no further, visit our barbershop today and experience the haircut of your life that will leave you feeling relaxed and looking perfectly.
+        Transform your home or workspace with stunning flooring installation in Utah, without burning a hole in your wallet. Our high-quality services are designed to meet your needs and exceed your expectations. Choose us today to experience the best of affordability and quality.
       </p>
       <p>
-        With a commitment to the extraordinary hair styling, in both technical skill and vision, our team of stylists drive home the true passion and dedication it takes to be your first choice. With us, every visit is unique and made-to-measure from start to finish. Personal attention, high-level expertise, and a comprehensive understanding not only of what fashion-forward is but what works with your individual style and hair. This is what you can expect from an experience at Claudio's Salon.
+        Grande Tile & Stone welcomes you to our exceptional custom tile installation services in Salt Lake City and surrounding areas. Our extensive experience and steadfast dedication to quality ensure that we deliver the highest quality tile installations for your home or workplace projects. You can trust us to get the job done right and exceed your expectations.
+      </p>
+      <p>
+        Grande Tile & Stone offers top-notch custom tile installation in Salt Lake City and surrounding areas. Trust us for high-quality work that exceeds your expectations.
       </p>
       <p>Images for the Home page</p>
-        <img src="images/woman-washing-head-hairsalon-min.jpg" alt="image for homepage">
-        <img src="images/man-cuts-his-beard-barbershop-min.jpg" alt="image for homepage">
+        <img src="images/tileHeader.jpeg" alt="image for homepage">
+        <img src="images/tileKitchen.jpeg" alt="image for homepage">
 
       </ul>
       <h3>Services</h3>
       <p>
-        Claudio's Salon bringing top end haircare to our community. We are passionate about hair, fashion, and customer service. Look at Our Services and join our existing customer base.
+        Stone floors are elegant but challenging to install due to variable factors.
       </p>
       <p>
-        We will help you discover the real you, maybe even a new you! Your haircut design is personally tailored to meet your lifestyle, facial features, and lots more to give you the look you want to portray to the world.
-      </p>
-      <p>
-        Whether long or short, and no matter the condition of your hair, our team will give you that unique haircut that accentuates your face, meets your expectations, and boosts your confidence. Our haircut services, and the actual cuts, are easy to maintain for that perfect hairdo, and our haircut recommendations will help you care for your new do and keep your new cut and style lasting longer.
-      </p>
-      <p>
-        A haircut is a result of technique and vision. Every haircut will begin with a complete consultation for a personalized cut to work with your hair texture, facial structure and styling needs; followed by a luxurious shampoo & relaxing scalp massage.
-      </p>
-      <p>
-        We specialize in all areas of hair including precision haircuts, creative highlights, colors, barbering and fades. Our talented hairstylists truly love what they do. Our goal is to create hair that works with your lifestyle.
-      </p>
-      <p>
-        If you're looking for hair treatment experts and permanent hair color specialists, you have come to the right place. Interested in our hair re-conditioning treatments or hair styling services? Book an appointment with one of our expert hairstylists at Claudio's today!
+        Hardwood Installation LVP / Vinyl Installation Laminate Tile Installation Stone
       </p>
       <p>Images for the Services Page</p>
-        <img src="images/beautiful-woman-getting-her-hair-cut-home-by-hairstylist-min.jpg" alt="image for page">
-        <img src="images/man-getting-haircut-close-up-min.jpg" alt="image for page">
+        <img src="images/tileInstallation.jpeg" alt="image for page">
+        <img src="images/tilelaying.jpeg" alt="image for page">
 
       </ul>
-      <h3>Products</h3>
+      <h3>Contact</h3>
       <p>
-        We are excited to introduce you to our favorite products.
+        If you're looking to enhance your living space with a top-of-the-line custom tile installation, don't hesitate to reach out to Grande Tile & Stone today. Our team is available to discuss your project, offer professional advice, and provide a personalized solution that caters to your specific requirements. Contact us now to get started.
       </p>
       <p>
-        Through an in-depth understanding of the technology behind every line we carry at the salon, we can help tailor the right product regimen for every individual.
+        Get in touch with Grande Tile & Stone today for a high-quality custom tile installation. Our team is ready to offer expert guidance and a personalized solution for your needs.
       </p>
-      <p>
-        By offering only the best and safest products in the industry, Claudio's Salon's products are guaranteed to maintain and enhance the integrity of your hair and color. Through an in-depth understanding of the technology behind every line we carry at the salon, we can help tailor the right product regimen for every individual.
-      </p>
-      <p>
-        We are proud to carry the best in hair care and skincare our industry has to offer. Paul Mitchell, Aveda, Jhonny B and Italtech occupy our shelves while the latest in product trends are featured seasonally. From high quality essential products to professional tools, we have a little bit of everything for everyone! 
-      </p>
-      <p>Images for the Products Page</p>
-        <img src="images/label-cosmetics-salud-health-belleza-min.jpg" alt="image for page3">
-        <img src="images/top-view-anti-dandruff-hair-products-min.jpg" alt="image for page3">
-
+      <p>Images for the Contact Page</p>
+        <img src="images/tileKitchen2.jpeg" alt="image for page3">
       </ul>
       <hr>
       <h2>
@@ -190,19 +173,19 @@
       <p>         
         This is the home page wireframe with Google map in one of the boxes.
       </p>
-      <img src="images/Homepage.png" alt="home page wireframe">
+      <img src="images/Grande Home Page.png" alt="home page wireframe">
 
       <h3>Services</h3>
       <p>         
-        Services page listing services provided and prices
+        Services page listing services provided.
       </p>
-      <img src="images/services.png" alt="Services page wireframe">
+      <img src="images/Services Page.png" alt="Services page wireframe">
 
-      <h3>Products</h3>
+      <h3>Contact</h3>
       <p>         
-        Products page listing products we carry in store with brief summary of each.
+        Contact page listing information for contact and estimate.
       </p>
-      <img src="images/products.png" alt="Products page wireframe">
+      <img src="images/Contact Page.png" alt="Contact page wireframe">
     </main>
   </body>
 
